MainView: Fixes Popup z-index

--- a/war/inspector.css
+++ b/war/inspector.css
@@ -236,3 +236,10 @@ h1,h2,h3,h4,h5,h6 {
 .suscribeButtonBill:hover {
 	background-position: 0 0;
 }
+
+.gwt-PopupPanel {
+	z-index: 100001;
+}
+.gwt-PopupPanelGlass {
+	z-index: 100000;
+}
